--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "form-wrapper-js",
   "version": "0.0.1",
-  "description": "JS abstraction of forms",
+  "description": "JS abstraction for forms",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
