--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "test": "jest",
     "build": "./node_modules/.bin/babel src --out-dir lib",
-    "prepublish": "npm run build"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -18,6 +18,10 @@
   "homepage": "https://github.com/Nevoss/form-wrapper-js",
   "keywords": [
     "forms",
+    "form",
+    "vue",
+    "form-vue",
+    "forms-vue",
     "js"
   ],
   "author": "Nevo Golan <nevos12@gmail.com>",
