--- a/tsconfig.json
+++ b/tsconfig.json
@@ -3,7 +3,7 @@
     "outDir": "./lib/",
     "module": "commonjs",
     "target": "es2015",
-    "sourceMap": true
+    "declaration": true
   },
   "include": [
     "src/**/*"
