--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.9",
     "jest": "^23.6.0",
+    "prettier": "1.15.3",
     "ts-jest": "^23.10.4",
     "typescript": "^3.1.6"
   }
