--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "./lib/",
-    "module": "commonjs",
+    "module": "es2015",
     "target": "es2015",
     "declaration": true
   },
