Testing Interceptors in more depth.
+ fixing some errors in the submit "chain"
+ updating dependencies for the project.

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,7 +4,11 @@
     "module": "es2015",
     "target": "es2015",
     "declaration": true,
-    "esModuleInterop": true
+    "esModuleInterop": true,
+    "types": [
+      "jest",
+      "jest-extended"
+    ]
   },
   "include": [
     "src/**/*"
