--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "test": "jest",
     "build": "rollup -c",
     "watch": "rollup -cw",
+    "codecov": "codecov",
     "prepublishOnly": "npm run build"
   },
   "repository": {
@@ -34,6 +35,7 @@
   "license": "MIT",
   "devDependencies": {
     "@types/jest": "^23.3.9",
+    "codecov": "^3.1.0",
     "jest": "^23.6.0",
     "prettier": "1.15.3",
     "rollup": "^0.67.4",
