Adding promise base validation
changing the whole validation system flow
- adding `returnsPromise` prop to the validation rule (not sure if necessary)
- adding more warns
- adding more explained errors `FieldValidationError` and `RuleValidationError` (to let all other errors to bubble up)
- `validateField`, `validateAll` and `validate` returns promise and not boolean (always resolved promise if the error of the validation is one of the new error classes)
- `Touched` class is removed and replaced with `FieldKeysCollections` (it is the same)

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,20 @@
 {
   "compilerOptions": {
-    "outDir": "./lib/",
+    "outDir": "./dist/",
     "module": "es2015",
     "target": "es2015",
     "declaration": true,
     "esModuleInterop": true,
+    "moduleResolution": "node",
     "types": [
       "jest",
       "jest-extended"
     ]
   },
   "include": [
-    "src/**/*"
+    "./src/**/*", "./tests/**/*"
   ],
   "exclude": [
-    "node_modules"
+    "node_modules", "./tests/**/*"
   ]
 }
