--- a/package.json
+++ b/package.json
@@ -43,5 +43,6 @@
     "rollup-plugin-typescript2": "^0.18.1",
     "ts-jest": "^23.10.5",
     "typescript": "^3.2.2"
-  }
+  },
+  "dependencies": {}
 }
