--- a/package.json
+++ b/package.json
@@ -10,10 +10,12 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "rollup -c",
+    "build": "rollup -c && docs:build",
     "watch": "rollup -cw",
     "codecov": "codecov",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs"
   },
   "repository": {
     "type": "git",
@@ -42,7 +44,8 @@
     "rollup": "^0.67.4",
     "rollup-plugin-typescript2": "^0.18.1",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "vuepress": "^0.14.8"
   },
   "dependencies": {}
 }
