--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "codecov": "codecov",
     "prepublishOnly": "npm run build",
     "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs"
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "npm run docs:build && gh-pages -d docs/.vuepress/dist"
   },
   "repository": {
     "type": "git",
@@ -38,6 +39,7 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "codecov": "^3.1.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "jest-extended": "^0.11.0",
     "prettier": "1.15.3",
