--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   ],
   "scripts": {
     "test": "jest",
-    "build": "rollup -c && docs:build",
+    "build": "rollup -c",
     "watch": "rollup -cw",
     "codecov": "codecov",
     "prepublishOnly": "npm run build",
