--- a/package.json
+++ b/package.json
@@ -13,7 +13,10 @@
     "build": "rollup -c",
     "watch": "rollup -cw",
     "codecov": "codecov",
-    "prepublishOnly": "npm run build"
+    "prepublishOnly": "npm run build",
+    "docs:dev": "vuepress dev docs",
+    "docs:build": "vuepress build docs",
+    "docs:deploy": "npm run docs:build && gh-pages -d docs/.vuepress/dist"
   },
   "repository": {
     "type": "git",
@@ -36,13 +39,15 @@
   "devDependencies": {
     "@types/jest": "^23.3.10",
     "codecov": "^3.1.0",
+    "gh-pages": "^2.0.1",
     "jest": "^23.6.0",
     "jest-extended": "^0.11.0",
     "prettier": "1.15.3",
     "rollup": "^0.67.4",
     "rollup-plugin-typescript2": "^0.18.1",
     "ts-jest": "^23.10.5",
-    "typescript": "^3.2.2"
+    "typescript": "^3.2.2",
+    "vuepress": "^0.14.8"
   },
   "dependencies": {}
 }
