--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -25,7 +25,7 @@ jobs:
 
             - run:
                 name: Run tests
-                command: npm test
+                command: npm test:prod
 
             - run:
                 name: Uplodad code coverage
