--- a/package.json
+++ b/package.json
@@ -12,7 +12,7 @@
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "test:prod": "jest --collectCoverage && npm run lint",
-    "build": "tsc --module commonjs && rollup -c rollup.config.js",
+    "build": "rollup -c rollup.config.js",
     "watch": "rollup -cw",
     "codecov": "codecov",
     "prepublishOnly": "npm run build",
@@ -39,24 +39,13 @@
   "author": "Nevo Golan <nevos12@gmail.com>",
   "license": "MIT",
   "devDependencies": {
-    "@types/faker": "^4.1.5",
-    "@types/jest": "^24.0.11",
-    "@typescript-eslint/eslint-plugin": "^1.7.0",
-    "@typescript-eslint/parser": "^1.7.0",
-    "codecov": "^3.4.0",
-    "eslint": "^5.16.0",
-    "eslint-config-prettier": "^4.1.0",
-    "eslint-plugin-prettier": "^3.0.1",
     "faker": "^4.1.0",
-    "jest": "^24.7.1",
-    "prettier": "^1.17.0",
-    "rimraf": "^2.6.3",
-    "rollup": "^1.10.1",
+    "jest": "^24.8.0",
+    "rollup": "^1.13.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
-    "rollup-plugin-typescript2": "^0.21.0",
+    "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.4.5",
-    "vuepress": "^1.0.0-alpha.47"
+    "typescript": "^3.5.1"
   },
   "dependencies": {},
   "peerDependencies": {}
