--- a/package.json
+++ b/package.json
@@ -4,15 +4,16 @@
   "description": "JS abstraction for forms",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
-  "types": "dist/index.d.ts",
+  "types": "dist/types/index.d.ts",
   "files": [
     "dist"
   ],
   "scripts": {
+    "prebuild": "rimraf dist",
+    "build": "tsc --module commonjs && rollup -c rollup.config.js",
     "lint": "eslint src/**/*.ts",
     "test": "jest",
     "test:prod": "jest --collectCoverage && npm run lint",
-    "build": "rollup -c rollup.config.js",
     "watch": "rollup -cw",
     "codecov": "codecov",
     "prepublishOnly": "npm run build",
@@ -39,13 +40,23 @@
   "author": "Nevo Golan <nevos12@gmail.com>",
   "license": "MIT",
   "devDependencies": {
+    "@types/faker": "^4.1.5",
+    "@types/jest": "^24.0.13",
+    "@typescript-eslint/eslint-plugin": "^1.9.0",
+    "@typescript-eslint/parser": "^1.9.0",
+    "codecov": "^3.5.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-prettier": "^3.1.0",
     "faker": "^4.1.0",
     "jest": "^24.8.0",
+    "prettier": "^1.17.1",
+    "rimraf": "^2.6.3",
     "rollup": "^1.13.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "^24.0.2",
-    "typescript": "^3.5.1"
+    "typescript": "^3.4.5"
   },
   "dependencies": {},
   "peerDependencies": {}
