--- a/package.json
+++ b/package.json
@@ -16,10 +16,7 @@
     "test:prod": "jest --collectCoverage && npm run lint",
     "watch": "rollup -cw",
     "codecov": "codecov",
-    "prepublishOnly": "npm run build",
-    "docs:dev": "vuepress dev docs",
-    "docs:build": "vuepress build docs",
-    "docs:deploy": "npm run docs:build && gh-pages -m 'Auto deploy [ci skip]' -d docs/.vuepress/dist"
+    "prepublishOnly": "npm run build"
   },
   "repository": {
     "type": "git",
@@ -53,6 +50,7 @@
     "prettier": "^1.17.1",
     "rimraf": "^2.6.3",
     "rollup": "^1.13.1",
+    "rollup-plugin-license": "^0.8.1",
     "rollup-plugin-sourcemaps": "^0.4.2",
     "rollup-plugin-typescript2": "^0.21.1",
     "ts-jest": "^24.0.2",
