--- a/docs/package.json
+++ b/docs/package.json
@@ -6,11 +6,12 @@
   "scripts": {
     "dev": "vuepress dev .",
     "build": "vuepress build .",
-    "docs:deploy": "npm run docs:build && gh-pages -m 'Auto deploy [ci skip]' -d docs/.vuepress/dist"
+    "deploy": "npm run build && gh-pages -m 'Auto deploy [ci skip]' -d docs/.vuepress/dist"
   },
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "gh-pages": "^2.0.1",
     "vuepress": "^1.0.0-alpha.48"
   }
 }
