--- a/package.json
+++ b/package.json
@@ -30,7 +30,7 @@
   "bugs": {
     "url": "https://github.com/Nevoss/form-wrapper-js/issues"
   },
-  "homepage": "https://github.com/Nevoss/form-wrapper-js",
+  "homepage": "https://nevoss.github.io/form-wrapper-js/",
   "keywords": [
     "forms",
     "form",
