--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "form-wrapper-js",
-  "version": "0.8.0",
+  "version": "1.0.0-beta.0",
   "description": "JS abstraction for forms",
   "main": "dist/index.js",
   "module": "dist/index.es.js",
