--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "build": "tsc --module commonjs && rollup -c rollup.config.js",
     "prebuild": "rimraf dist",
     "prepublishOnly": "npm run build",
-    "release": "release-it"
+    "release": "release-it",
+    "prettier:fix": "prettier src/**/*.ts --config=.prettierrc --write"
   },
   "husky": {
     "hooks": {
