--- a/docs/package.json
+++ b/docs/package.json
@@ -11,7 +11,7 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "gh-pages": "^2.0.1",
-    "vuepress": "^1.0.0-alpha.48"
+    "gh-pages": "^2.2.0",
+    "vuepress": "^1.3.1"
   }
 }
